; ModuleID = '/home/carl/AnghaBench/kphp-kdb/mc-proxy/extr_mc-proxy-search-extension.c_parse_search_extras.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/mc-proxy/extr_mc-proxy-search-extension.c_parse_search_extras.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEARCH_EXTENSION = common dso_local global i64 0, align 8
@SEARCHX_EXTENSION = common dso_local global i64 0, align 8
@TARG_EXTENSION = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @parse_search_extras to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @parse_search_extras(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i64, i64* @SEARCH_EXTENSION, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i64, i64* @SEARCHX_EXTENSION, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %6, %1
  %10 = load i8*, i8** %3, align 8
  %11 = call i8* @search_parse_search_extras(i8* %10)
  store i8* %11, i8** %2, align 8
  br label %21

12:                                               ; preds = %6
  %13 = load i64, i64* @TARG_EXTENSION, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %12
  %16 = load i8*, i8** %3, align 8
  %17 = call i8* @targ_parse_search_extras(i8* %16)
  store i8* %17, i8** %2, align 8
  br label %21

18:                                               ; preds = %12
  %19 = call i32 @assert(i32 0)
  br label %20

20:                                               ; preds = %18
  br label %21

21:                                               ; preds = %9, %15, %20
  %22 = load i8*, i8** %2, align 8
  ret i8* %22
}

declare dso_local i8* @search_parse_search_extras(i8*) #1

declare dso_local i8* @targ_parse_search_extras(i8*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
